# tfQMRgpu

./: .gitignore  CMakeLists.txt  Config.cmake.in  LICENSE  README.md
docs/: .gitignore  tfQMRgpu_manual.tex
docs/logo/: tf_Button_black.ai  tf_QMR.ai
example/: CMakeLists.txt  tfqmrgpu_C_example.c  tfqmrgpu_Fortran_example.F90  tfqmrgpu_Julia_example.jl  tfqmrgpu_example_reader.cxx  tfqmrgpu_example_xml_reader.cxx  tfqmrgpu_example_xml_reader.hxx  tfqmrgpu_generate_FD_example.cxx  tfqmrgpu_python_example.py
fortran/: CMakeLists.txt
include/: bsr.hxx  tfqmrgpu.h  tfqmrgpu.hxx  tfqmrgpu_blockmult.hxx  tfqmrgpu_blocksparse.hxx  tfqmrgpu_core.hxx  tfqmrgpu_cudaStubs.hxx  tfqmrgpu_example_reader.hxx  tfqmrgpu_example_xml_reader.hxx  tfqmrgpu_handle.hxx  tfqmrgpu_linalg.hxx  tfqmrgpu_plan.hxx  tfqmrgpu_util.hxx
source/: CMakeLists.txt  Makefile  bench_tfqmrgpu.cu  test_tfqmrgpu.cxx  tfqmrgpu.cu
test/multiplication/: plan_reordered.14-287-16  plan_unordered.14-287-16
tfQMRgpu/: CMakeLists.txt
tfQMRgpu/include/: allowed_block_sizes.h  bsr.hxx  tfqmrgpu.h  tfqmrgpu.hxx  tfqmrgpu_Fortran.h  tfqmrgpu_Fortran_module.F90  tfqmrgpu_blockmult.hxx  tfqmrgpu_blocksparse.hxx  tfqmrgpu_bsr.hxx  tfqmrgpu_core.hxx  tfqmrgpu_cudaStubs.hxx  tfqmrgpu_example_reader.hxx  tfqmrgpu_example_xml_reader.hxx  tfqmrgpu_handle.hxx  tfqmrgpu_linalg.hxx  tfqmrgpu_memWindow.h  tfqmrgpu_plan.hxx  tfqmrgpu_util.hxx
tfQMRgpu/source/: bench_tfqmrgpu.cu  bench_tfqmrgpu.cxx  tfqmrgpu.cu  tfqmrgpu.cxx  tfqmrgpu_Fortran_wrappers.c  tfqmrgpu_error_tool.cxx
